2004-10-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-copy-article-ignored-headers): Default to
	nil.  Changed custom type.

2004-10-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-copy-article-ignored-headers): New variable.

	* gnus-sum.el (gnus-summary-move-article): Use it.

2004-10-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-backend-article-list-property)
	(spam-backend-get-article-todo-list)
	(spam-backend-put-article-todo-list, )
	(spam-summary-prepare-exit, spam-resolve-registrations-routine):
	resolve registrations separately
	(spam-register-routine): format comments
	(spam-unregister-routine, spam-register-routine): always call with
	specific-articles, no default list
	(spam-summary-prepare-exit): use the spam-classifications function

	* netrc.el (autoload, netrc-parse): use encrypt.el instead of
	gnus-encrypt.el

	* encrypt.el: copied from gnus-encrypt.el

	* gnus-encrypt.el: commented that it's obsolete

2004-10-15  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-adaptive-pretty-print): New variable.
	(gnus-score-save): Use it.

	* message.el (message-bury): Use `window-dedicated-p'.

2004-10-15  Simon Josefsson  <jas@extundo.com>

	* pop3.el (top-level): Don't require nnheader.
	(pop3-read-timeout): Add.
	(pop3-accept-process-output): Add.
	(pop3-read-response, pop3-retr): Use it.

2004-10-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-register-routine): move comment
	(spam-verify-bogofilter): we use 'unknown for the initial
	spam-bogofilter-valid state, not 'never

	* netrc.el (netrc-machine-user-or-password): convenience wrapper
	for netrc-machine

	* nnimap.el (nnimap-open-connection): use
	netrc-machine-user-or-password

2004-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-tokenize-header): Fix 2004-09-06 change
	which used point-min in the wrong place.

2004-10-12  Simon Josefsson  <jas@extundo.com>

	* net/tls.el (tls-certtool-program): New variable.